--- a/popup.html
+++ b/popup.html
@@ -15,6 +15,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/popup.tsx"></script>
+    <script type="module" src="./src/popup.tsx"></script>
   </body>
 </html>
