--- a/popup.html
+++ b/popup.html
@@ -3,13 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lancer</title>
+    <title>Lancer Settings</title>
     <style>
       body {
         width: 400px;
-        height: 600px;
+        min-height: 500px;
         margin: 0;
         padding: 0;
+        overflow-x: hidden;
+      }
+
+      #root {
+        min-height: 500px;
       }
     </style>
   </head>
